--- a/reports/templates/distribution.html
+++ b/reports/templates/distribution.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="report.css">
-		<meta name="description" content="Byteball periodically rewards contributors to World Community Grid, check reports of completed distributions.">
+		<meta name="description" content="Obyte periodically rewards contributors to World Community Grid, check reports of completed distributions.">
 		<title></title>
 	</head>
 	<body>
