--- a/reports/templates/index.html
+++ b/reports/templates/index.html
@@ -2,15 +2,15 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="report.css">
-		<meta name="description" content="Byteball periodically rewards contributors to World Community Grid, check reports of completed distributions.">
+		<meta name="description" content="Obyte periodically rewards contributors to World Community Grid, check reports of completed distributions.">
 		<title>Reports of completed distributions - Byteball Computing For Good </title>
 	</head>
 	<body>
 		<div id="main_index">
 			<div id="title_index">
-				<h3>Byteball Computing For Good - Completed distributions</h3>
+				<h3>Obyte Computing For Good - Completed distributions</h3>
 			</div>
-			<div id=learn_more><a href='https://medium.com/byteball/computing-for-good-again-3795336bdaed'>Learn more about Byteball distribution through WCG</a></div>
+			<div id=learn_more><a href='https://medium.com/byteball/computing-for-good-again-3795336bdaed'>Learn more about Obyte distribution through WCG</a></div>
 			<div id="distributions_list">
 				<table class="distributions_table">
 					<tbody id="table_body">
