--- a/reports/templates/index.html
+++ b/reports/templates/index.html
@@ -3,14 +3,14 @@
 	<head>
 		<link rel="stylesheet" href="report.css">
 		<meta name="description" content="Obyte periodically rewards contributors to World Community Grid, check reports of completed distributions.">
-		<title>Reports of completed distributions - Byteball Computing For Good </title>
+		<title>Reports of completed distributions - Obyte Computing For Good </title>
 	</head>
 	<body>
 		<div id="main_index">
 			<div id="title_index">
 				<h3>Obyte Computing For Good - Completed distributions</h3>
 			</div>
-			<div id=learn_more><a href='https://medium.com/byteball/computing-for-good-again-3795336bdaed'>Learn more about Obyte distribution through WCG</a></div>
+			<div id=learn_more><a href='https://medium.com/obyte/computing-for-good-again-3795336bdaed'>Learn more about Obyte distribution through WCG</a></div>
 			<div id="distributions_list">
 				<table class="distributions_table">
 					<tbody id="table_body">
